--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,7 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 3rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -67,10 +67,17 @@
 
 .grid {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
+}
+
+.sub_grid {
+  display: flex;
+  align-content: stretch;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .card {
@@ -83,6 +90,7 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
+  width: 300px;
 }
 
 .card:hover,
@@ -106,6 +114,14 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.hover {
+  transition: all 0.15s;
+}
+
+.hover:hover {
+  color: #0070f3;
 }
 
 @media (max-width: 600px) {
